# agents-workshop-s4

./: README.md  main.py  pyproject.toml  requirements.txt
a2a_lab/: starter.py
mcp_lab/: claude_desktop_config.json
