[project]
name = "agents-workshop-s4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=5.3.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "mcp[cli]>=1.0.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "pygithub>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sse-starlette>=2.0.0",
    "tavily-python>=0.3.0",
    "uv>=0.4.0",
    "uvicorn[standard]>=0.29.0",
]
